--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "dev": "nodemon src/server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
     "@langchain/community": "^0.0.20",
     "@langchain/core": "^0.1.17",
-    "chromedriver": "^114.0.0",
+    "chromedriver": "^136.0.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "json-fixer": "^1.6.15",
+    "zod": "^3.23.8",
     "selenium-webdriver": "^4.32.0"
   },
   "devDependencies": {
